fixing some general spacing and styling - consolidating some sass

--- a/assets/sass/components/_body.scss
+++ b/assets/sass/components/_body.scss
@@ -12,20 +12,6 @@ html body {
 				/*position: relative;*/
 			}
 		}
-		#primary {
-			article {
-				margin-bottom: 20px;
-				padding-bottom: 0;
-			}
-			.entry-content {
-				p {
-					margin-bottom: 0;
-				}
-			}
-			.entry-meta {
-				margin-top: 0;
-			}
-		}
 	}
 	&.page-on-our-stage {
 		#primary {
@@ -195,32 +181,45 @@ html body {
 			background: none;
 		}
 		#primary {
+
 			margin-top: 0;
 
 			#content {
 				padding-right: 40px;
 				padding-top: 15px;
-				p {
-					line-height: 1.35;	
-				}
-				strong {
-					font-weight: bold;
-				}
-				em {
-					font-style: italic;
-				}
-				
-				.entry-content{
-					h2 {
-						font-weight: bold;
-						font-size: 23px;
-						padding-top: 0;
-						margin-top: 0;
-						margin-bottom: 20px;
-					}
-				}
-
 			}
+			
+			article {
+				margin-bottom:auto;
+				margin-bottom: 20px;
+				padding-bottom: 0;
+			}
+
+			p {
+					line-height: 1.35;	
+					margin-bottom: 0;
+			}
+
+			strong {
+				font-weight: bold;
+			}
+			em {
+				font-style: italic;
+			}
+		
+			.entry-content{
+				h2 {
+					font-weight: bold;
+					font-size: 23px;
+					padding-top: 0;
+					margin-top: 0;
+					margin-bottom: 20px;
+				}
+			}
+			.entry-meta {
+				margin-top: 0;
+			}
+
 		}
 		#secondary {
 			margin-top: 0;
